# SenseHatNet

./: .gitignore  LICENSE  README.md  build-RTIMULib-dev.ps1  nuget-pack.ps1  nuget-push.ps1  publish-and-deploy.ps1  publish-pi.ps1  publish.ps1  run-RTIMULib-dev.ps1  watch-upload.ps1
RTIMUExt/: Dockerfile  build.ps1
RTIMUExt/src/: CMakeLists.txt  fcntl.cpp  rtimulibwrapper.cpp
RTIMULib-dev/: Dockerfile  build.ps1
RTIMULibNet/: LedMatrix.cs  NativeMethods.cs  RTHumidity.cs  RTHumidityData.cs  RTIMU.cs  RTIMUData.cs  RTIMULibNet.csproj  RTIMUSettings.cs  RTPressure.cs  RTPressureData.cs
RTIMULibWrapper/: CMakeLists.txt  main.cpp  rtimulibwrapper.cpp
SSHSync/generate-ssh-cert/: Dockerfile  run.ps1
SSHSync/ssh-sync/: Dockerfile  run.ps1
Sample/: .dockerignore  Dockerfile  build.sh  run.sh
Sample/SenseTest/: SenseTest.csproj
Sense/: NativeMethods.cs  Sense.csproj
Sense/Led/: Cell.cs  CellColor.cs  Color.cs  Led.cs  LedMatrix.cs  Pixels.cs  PixelsFromText.cs
Sense/Native/: libRTIMULib.so.7
Sense/Native/aarch64/: libRTIMULib.so.7
Sense/Native/arm/: libRTIMULib.so.7
Sense/RTIMU/: LedMatrix.cs  NativeMethods.cs  RTHumidity.cs  RTHumidityData.cs  RTIMU.cs  RTIMUData.cs  RTIMUSettings.cs  RTPressure.cs  RTPressureData.cs
Sense/Stick/: Joystick.cs  JoystickEvent.cs  JoystickKey.cs  JoystickKeyState.cs
Sense/Utils/: EqualityComparer.cs  GenericEqualityComparer.cs
SenseTest/: Cell.cs  CellColor.cs  Color.cs  Led.cs  LedPixels.cs  LedPixelsFromText.cs  Letter.cs  Program.cs  Sense.cs  SenseTest.csproj
SenseTest/Utils/: EqualityComparer.cs  GenericEqualityComparer.cs
UploadPi/: ConnectedObject.fs  Program.fs  UploadPi.fsproj
utils/: setup-pi.sh
