CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

SET(LIBRTIMUWrapper_SRCS
    main.cpp
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../RTIMULib/RTIMULib)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../RTIMULib/RTIMULib RTIMULib)

IF(UNIX)
    ADD_LIBRARY(RTIMULibWrapper SHARED ${LIBRTIMUWrapper_SRCS})
    TARGET_LINK_LIBRARIES(RTIMULibWrapper RTIMULib)
    INSTALL(TARGETS RTIMULibWrapper DESTINATION lib)
ENDIF(UNIX)